--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "netspeed-lite"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Satya"]
 description = "ISP speed monitor with Prometheus metrics and ntfy notifications"
@@ -16,7 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "net", "signal", "process", "time", "sync", "io-util"] }
+tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "net", "signal", "process", "time", "sync", "io-util", "fs"] }
 
 # HTTP server
 axum = "0.8"
@@ -43,6 +43,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 # Error handling
 anyhow = "1.0"
 thiserror = "2.0"
+
+[dev-dependencies]
+serial_test = "3.3"
 
 [profile.release]
 opt-level = 3
