--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "netspeed-lite"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["Satya"]
 description = "ISP speed monitor with Prometheus metrics and ntfy notifications"
@@ -16,7 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Async runtime
-tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "net", "signal", "process", "time", "sync", "io-util", "fs"] }
+tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "net", "signal", "process", "time", "sync", "io-util"] }
 
 # HTTP server
 axum = "0.8"
